# network-effectful

./: .gitignore  CHANGELOG.md  LICENSE  flake.nix  network-effectful.cabal  socket-effectful.cabal
.github/workflows/: ci.yml
src/Effectful/: Network.hs  Socket.hs
src/Effectful/Network/: Lazy.hs
