cabal-version:   3.0
name:            network-effectful
version:         0.2.0.1
synopsis:
  Adaptation of the network library for the effectful ecosystem.

description:
  Adaptation of the @<https://hackage.haskell.org/package/network network>@ library for the @<https://hackage.haskell.org/package/effectful effectful>@ ecosystem.

homepage:        https://github.com/Cajunvoodoo/network-effectful#readme
bug-reports:     https://github.com/Cajunvoodoo/network-effectful/issues
license:         BSD-3-Clause
license-file:    LICENSE
author:          Cajunvoodoo
maintainer:      cajunvoodoo (discord)

-- copyright:
category:        Network
build-type:      Simple
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/Cajunvoodoo/network-effectful

-- extra-source-files:
common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Effectful.Network
    Effectful.Network.Lazy

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base            <5
    , bytestring      <0.13
    , effectful-core  >=1.0 && <3.0
    , network         >=3.0 && <4.0

  hs-source-dirs:   src
  default-language: GHC2021
