cabal-version: 3.0
name: socket-effectful
version: 0.1.0.0
synopsis:
  Adaptation of the socket library for the effectful ecosystem.

description:
  Adaptation of the @<https://hackage.haskell.org/package/socket socket>@ library for the @<https://hackage.haskell.org/package/effectful effectful>@ ecosystem.

homepage: https://github.com/Cajunvoodoo/socket-effectful#readme
bug-reports: https://github.com/Cajunvoodoo/socket-effectful/issues
license: BSD-3-Clause
license-file: LICENSE
author: Cajunvoodoo
maintainer: 27892784+Cajunvoodoo@users.noreply.github.com
-- copyright:
category: Network
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules: Effectful.Socket
  -- other-modules:
  -- other-extensions:
  build-depends:
    base <5,
    bytestring,
    effectful-core,
    network,

  hs-source-dirs: src
  default-language: GHC2021
